added content to home page

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -67,3 +67,19 @@
   font-size: 12px;
 }
 
+.row {
+  margin-top: 250px;
+
+}
+.card {
+  background-color: transparent;
+  border: none;
+}
+.card h1 {
+  font-family: 'Permanent Marker', cursive;
+}
+
+.extra-margin {
+  margin-top: -20px;
+}
+
