--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,16 @@
 
+<div class="row">
+  <div class="col-sm-3">
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-block">
+        <h1 class="card-title">Welcome to SciOlyGeo</h1>
+        <p class="card-text">This is a site for aspiring Science Olympiad Students who need help with Geolgy based events. Feel free to explore the links up top or click the button below to get started.</p>
+        <%= link_to "Get Started", helpful_tricks_path, class: "btn btn-danger" %>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-3">
+  </div>
+</div>
