--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,9 +2,9 @@
 <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-inverse p-4">
-        <div class="row">
+        <div class="row extra-margin">
           <div class="col-md-4">
-            <h4 class="instruct">Navigate our site</h4>
+            <h4 class="instruct">Welcome to SciOLyGeo</h4>
             
             <p class="nav-text">
               This is a site built to help Science Olympiad competitors with geology themed events. This includes Rocks and Minerals, Geological Mapping, Dynamic Planet, Hydrogeology and Remote Senseing. I know it's a little niche but I'm really passionate about these sorts of events and too often I see students not knowing where to start for information. This is a launching platform.  
@@ -15,14 +15,23 @@
               <span class="cool-font"><%= link_to "Home", root_path %></span>
             </div>
             <div class= "nav-item">
-              <span class="cool-font"><%= link_to "Useful Links", pics_path %></span>
+              <span class="cool-font"><%= link_to "Useful Links", links_path %></span>
             </div>
             <div class= "nav-item">
               <span class="cool-font"><%= link_to "Events", events_path %></span>
             </div>
             <div class= "nav-item">
               <span class="cool-font"><%= link_to "About", about_path %></span>
+            </div>
+            <div class= "nav-item">
+              <span class="cool-font"><%= link_to "Funnies", funnies_path %></span>
             </div> 
+            <div class= "nav-item">
+              <span class="cool-font"><%= link_to "Tips And Tricks", helpful_tricks_path %></span>
+            </div>
+            <div class= "nav-item">
+              <span class="cool-font"><%= link_to "Cool Pics", pics_path %></span>
+            </div>
           </div>
           <div class="col-md-6">
             <h1 class="banner">Rocks And Minerals Rule!</h1>
