--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,9 @@
             %>
 
             <%= render "shared/nav" %>
-  
-  <%= yield %>
+  <div class="container">
+    <%= yield %>
+  </div>
             <%= render "shared/footer" %>
   
 </body>
