--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,13 @@
       <div class="card-block">
         <h1 class="card-title">Welcome to SciOlyGeo</h1>
         <p class="card-text">This is a site for aspiring Science Olympiad Students who need help with Geolgy based events. Feel free to explore the links up top or click the button below to get started.</p>
-        <%= link_to "Get Started", helpful_tricks_path, class: "btn btn-danger" %>
+        
+          
+        <div class="button">
+          <%= link_to "Get Started", helpful_tricks_path, class: "btn btn-danger btn-lg" %>
+        </div>
+        
+        
       </div>
     </div>
   </div>
